<resources>
    <string name="app_name">Pocket Admin</string>
    <string name="product_create">Crear</string>

    <string name="product_empty_cart">Carrito Vacío</string>
    <string name="product_full_cart">Total: Q.%1$.2f</string>

    <string name="order_track_shipment">Seguir envio</string>
    <string name="order_estatus">Estado: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="chip_chat_help">¿Necesitas ayuda?</string>
    <string name="order_title">Historial de Compras</string>

    <string name="order_status_ordered">Pedido</string>
    <string name="order_status_processing">Procesando</string>
    <string name="order_status_sent">Enviado</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_unknown">Desconocido</string>

    <string name="track_title">Rastreo</string>
    <string name="hint_status">Estado</string>

    <string name="hint_chat">Escribe algo...</string>
    <string name="chat_title">Soporte</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="descripci_n_del_producto">Descripción del Producto</string>
    <string name="url_image">URL Image</string>
    <string name="map_image">Map Image</string>
    <string name="facebook_url">Facebook Url</string>
    <string name="no_tel_fono">No. Teléfono</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="disponible">Disponible</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
</resources>